# fk_PoE.c

./: CMakeLists.txt  linalg.hpp  main.cpp  optimized_linalg.hpp
src/: CMakeLists.txt  main.cpp
src/linalg/: CMakeLists.txt  linalg_T.hpp
with-template/src/: CMakeLists.txt  main.cpp
with-template/src/linalg/: linalg.cpp  linalg.h  linalg_T.hpp
